--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "ada35a54-ba6b-4adf-9b5b-9f5477ac8350"
 authors = ["Sven Duve <svenduve@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+RLTypes = "caff8df6-c124-4ea5-aa40-27805766b7ca"
+
 [compat]
 julia = "1"
 
