--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,6 +47,7 @@ jobs:
         run: |
           julia --project=docs/ -e '
             using Pkg
+            Pkg.develop(url="https://github.com/SvenDuve/RLTypes.jl")
             Pkg.develop(PackageSpec(path=pwd()))
             Pkg.instantiate()'
       - uses: julia-actions/julia-buildpkg@v1
